--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 /* ---------------- OTHER ---------------- */
 .other-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center;justify-content:center}
 .other-grid p{color:#aaa;transition:.4s}
-/* Force 5th item to a new row, centered */
-.other-grid p.fifth{grid-column:1/-1;}
 
 /* ---------------- PROJECTS ---------------- */
 .project-tabs{display:flex;justify-content:center;gap:20px;margin-bottom:40px}
@@ -55,10 +53,9 @@ h2{text-align:center;font-size:2.8em;margin-bottom:60px;background:linear-gradie
 .view-btn{margin-top:15px;padding:8px 22px;border-radius:20px;background:linear-gradient(135deg,#9a5cff,#5ddcff);color:#000;border:none;cursor:pointer;font-weight:600}
 
 /* ---------------- CONTACT ---------------- */
-.contact{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;text-align:center}
-.contact p{color:#aaa}
-.contact a{color:#5ddcff;text-decoration:none}
-.contact .discord{grid-column:1/-1;text-align:center;margin-top:10px;}
+.contact{display:flex;gap:50px;text-align:left;flex-wrap:wrap;justify-content:center}
+.contact p{color:#aaa;margin:0}
+.contact a{color:#5ddcff;text-decoration:none;margin-left:8px}
 
 /* ---------------- BUTTONS ---------------- */
 .lang-toggle, .toggle-effects{position:fixed;bottom:20px;right:20px;z-index:200;background:rgba(10,10,20,.7);border:1px solid #5ddcff;color:#fff;padding:8px 14px;border-radius:20px;cursor:pointer;backdrop-filter:blur(6px)}
@@ -146,7 +143,7 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
     </div>
     <div class="skill-card"><h3>Python</h3><p data-key="basic"></p></div>
     <div class="skill-card"><h3>AutoHotkey</h3><p data-key="basic"></p></div>
-    <div class="skill-card"><h3>3D Modelling</h3><p data-key="basic"></p></div>
+    <div class="skill-card" style="grid-column:1/-1;"><h3>3D Modelling</h3><p data-key="basic"></p></div>
   </div>
 </section>
 
@@ -196,7 +193,7 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
     <p data-key="algorea"></p>
     <p data-key="ai"></p>
     <p data-key="german"></p>
-    <p class="fifth">Worked on the wiki for the game Abyss on Roblox.</p>
+    <p>Worked on the wiki for the game Abyss on Roblox.</p>
   </div>
 </section>
 
@@ -207,9 +204,9 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
       <p data-key="email"></p>
       <a href="mailto:mysticlchq@gmail.com">mysticlchq@gmail.com</a>
     </div>
-    <div class="discord">
-      <p data-key="discord"></p>
-      <a href="https://discord.com/users/858353168701718538" target="_blank">Add on Discord</a>
+    <div>
+      <p>Discord</p>
+      <a href="https://discord.com/users/858353168701718538">@_mystik</a>
     </div>
   </div>
 </section>
@@ -232,7 +229,6 @@ footer{text-align:center;padding:20px;color:#777;font-size:0.9em}
 </div>
 
 <script>
-/* ---------------- DICTIONARY ---------------- */
 let fr = false;
 const dict = {
   about:["About","À propos"],
@@ -255,76 +251,75 @@ const dict = {
   qac:["Multiple playtested games through QA Central, a hub for developers seeking testers.","Plusieurs jeux testés via QA Central, une plateforme pour développeurs recherchant des testeurs."],
   nrp:["Lethal Company performance mod removing rain particle effects.","Mod de performance pour Lethal Company supprimant les particules de pluie."],
   bcs:["Lethal Company mod that syncs the cruiser between players.","Mod de synchronisation du camion entre les joueurs sur Lethal Company."],
-  email:["Email","Courriel"],
-  discord:["Discord","Discord"],
-  b2:["B2 challenge","Défi B2"],
-  algorea:["Algoréa","Algoréa"],
-  ai:["AI projects","Projets IA"],
-  german:["German practice","Pratique de l’allemand"]
+  email:["Email","Email"],
+  b2:["Certified Cambridge B2 English level","Certification anglais B2"],
+  algorea:["Reached Quarter-Finals of national contest Algoréa twice (Scratch)","Quart de finale du Concours Algoréa national deux fois (Scratch)"],
+  ai:["I use AI to assist with coding","J'utilise l'IA pour m'aider à coder"],
+  german:["I speak a bit of German","Je parle un peu allemand"],
+  discord:["Add on discord","M'ajouter sur Discord"]
 };
 
-function translate(){
+function updateLanguage(){
   document.querySelectorAll('[data-key]').forEach(el=>{
-    const key=el.dataset.key;
-    if(dict[key]) el.innerText = fr? dict[key][1]:dict[key][0];
+    const key = el.getAttribute('data-key');
+    if(dict[key]) el.textContent = dict[key][fr?1:0];
   });
+  document.getElementById('langToggle').textContent = fr ? 'EN':'FR';
 }
 document.getElementById('langToggle').addEventListener('click',()=>{
-  fr=!fr;
-  translate();
-  document.getElementById('langToggle').innerText=fr?'EN':'FR';
+  fr = !fr;
+  updateLanguage();
 });
-translate();
+updateLanguage();
 
-/* ---------------- PROJECT MODAL ---------------- */
-function showProjects(type, btn){
+function showProjects(id, btn){
   document.querySelectorAll('.projects-grid').forEach(grid=>grid.style.display='none');
-  document.getElementById(type).style.display='grid';
+  document.getElementById(id).style.display='grid';
   document.querySelectorAll('.project-tabs button').forEach(b=>b.classList.remove('active'));
   btn.classList.add('active');
 }
 
-const modal=document.getElementById('projectModal');
-const modalImg=document.getElementById('modalImage');
-const modalTitle=document.getElementById('modalTitle');
-const modalPosition=document.getElementById('modalPosition');
-const modalStatus=document.getElementById('modalStatus');
-const modalLink=document.getElementById('modalLink');
-
-document.querySelectorAll('.project-card').forEach(card=>{
-  card.addEventListener('click',()=>{
-    if(!card.dataset.info) return;
-    const info=JSON.parse(card.dataset.info);
-    modalImg.src=info.image;
-    modalTitle.innerText=info.title;
-    modalPosition.innerText=info.position;
-    modalStatus.innerText=info.status;
-    modalStatus.className=info.status==="Active"?"status-active":"status-inactive";
-    modalLink.href=info.link;
-    modal.style.display='flex';
-  });
+let effectsOn = true;
+document.querySelector('.toggle-effects').addEventListener('click',()=>{
+  effectsOn = !effectsOn;
+  document.querySelector('.bg').style.display = effectsOn?'block':'none';
+  document.querySelector('.toggle-effects').textContent = effectsOn?'Disable Effects':'Enable Effects';
 });
 
-document.querySelector('.modal .close').addEventListener('click',()=>modal.style.display='none');
-window.addEventListener('click',e=>{if(e.target==modal) modal.style.display='none'});
-
-/* ---------------- PARTICLES ---------------- */
-const particlesEl=document.getElementById('particles');
-for(let i=0;i<70;i++){
-  let span=document.createElement('span');
-  span.className=['small','medium','large'][Math.floor(Math.random()*3)];
-  span.style.left=Math.random()*100+'%';
-  span.style.animationDuration=6+Math.random()*14+'s';
-  span.style.animationDelay=Math.random()*10+'s';
-  particlesEl.appendChild(span);
+const particles = document.getElementById('particles');
+for(let i=0;i<150;i++){
+  const span = document.createElement('span');
+  const size = Math.random()*3+1;
+  span.className = size<1.5?'small':size<2.5?'medium':'large';
+  span.style.left=Math.random()*100+'vw';
+  span.style.animationDuration=10+Math.random()*20+'s';
+  span.style.width=size+'px';
+  span.style.height=size+'px';
+  particles.appendChild(span);
 }
 
-/* ---------------- TOGGLE EFFECTS ---------------- */
-let effectsOn=true;
-document.querySelector('.toggle-effects').addEventListener('click',()=>{
-  effectsOn=!effectsOn;
-  document.querySelector('.bg').style.display=effectsOn?'block':'none';
+const modal = document.getElementById('projectModal');
+const modalImage = document.getElementById('modalImage');
+const modalTitle = document.getElementById('modalTitle');
+const modalPosition = document.getElementById('modalPosition');
+const modalStatus = document.getElementById('modalStatus');
+const modalLink = document.getElementById('modalLink');
+document.querySelectorAll('.project-card .view-btn').forEach(btn=>{
+  btn.addEventListener('click',e=>{
+    const info = JSON.parse(btn.parentElement.dataset.info||'{}');
+    if(Object.keys(info).length){
+      modal.style.display='flex';
+      modalImage.src = info.image||'';
+      modalTitle.textContent = info.title||'';
+      modalPosition.textContent = info.position||'';
+      modalStatus.textContent = info.status||'';
+      modalStatus.className = info.status==='Active'?'status-active':'status-inactive';
+      modalLink.href = info.link||'#';
+    }
+  });
 });
+document.querySelector('.modal .close').addEventListener('click',()=>modal.style.display='none');
+window.addEventListener('click',e=>{if(e.target==modal) modal.style.display='none'});
 </script>
 
 </body>
